--- a/src/app/pages/config/common/sub-category-table/sub-category-table.component.html
+++ b/src/app/pages/config/common/sub-category-table/sub-category-table.component.html
@@ -9,15 +9,19 @@
       </tr>
     </thead>
     <tbody>
-
-      <tr *ngFor="let sc of sub_categories; index as i">
-        <th scope="row">{{ i + 1 }}</th>
-        <td>
-          {{ sc.name }}
-        </td>
-        <td> &nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
-        </td>
-      </tr>
+      <div *ngIf="sub_categories && sub_categories.length === 0; else tableData">
+        <h5>no data</h5>
+      </div>
+      <ng-template #tableData>
+        <tr *ngFor="let sc of sub_categories; index as i">
+          <th scope="row">{{ sc.id}}</th>
+          <td>
+            {{ sc.title }}
+          </td>
+          <td> &nbsp;&nbsp;<i class="bi bi-trash3" (click)="onDeleteClick(sc?.id)" style="color: red;"></i>
+          </td>
+        </tr>
+      </ng-template>
     </tbody>
   </table>
 </div>
