--- a/src/app/pages/config/featured-categories/featured-categories.component.html
+++ b/src/app/pages/config/featured-categories/featured-categories.component.html
@@ -17,7 +17,8 @@
 
   </div>
 
-  <div class="row mt-3">
+  <app-sub-category-form></app-sub-category-form>
+  <!-- <div class="row mt-3">
     <div class="form-group col-lg-4">
       <label class="mb-1" for="title">Sub Category</label>
       <input type="text" class="form-control" id="Sub Category" placeholder="Sub Category">
@@ -30,14 +31,9 @@
       </button>
     </div>
 
+  </div> -->
 
-  </div>
 
-  <div class="row">
-    <div class="form-group col-lg-6 mt-2">
-      <app-sub-category-table></app-sub-category-table>
-    </div>
-  </div>
 
   <button type="submit" class="btn btn-primary btn-lg mt-3"><i class="bi bi-save"></i>&nbsp;Save</button>
 
