--- a/src/app/pages/config/featured-categories/featured-categories.component.html
+++ b/src/app/pages/config/featured-categories/featured-categories.component.html
@@ -1,41 +1,30 @@
-<form style="width: 100%; margin: 30px 30px;">
+<form [formGroup]="form" style="width: 100%; margin: 30px 30px;">
   <div class="row">
     <div class="form-group col-lg-5">
       <label for="title">Title</label>
-      <input type="text" class="form-control" id="title" placeholder="Title">
+      <input formControlName="title" type="text" class="form-control" id="title" placeholder="Title">
+      <app-errors [form_control]="f['title']" [isSubmitted]="isFormSubmit"></app-errors>
+
     </div>
     <div class="form-group col-lg-5">
       <label for="imageUrl">Image Url</label>
-      <input type="url" class="form-control" id="imageUrl" placeholder="Image Url">
+      <input formControlName="imageUrl" type="url" class="form-control" id="imageUrl" placeholder="Image Url">
+      <app-errors [form_control]="f['imageUrl']" [isSubmitted]="isFormSubmit"></app-errors>
     </div>
     <div class="form-group col-lg-2 mt-4">
       <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <input formControlName="package" type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Package</label>
       </div>
     </div>
 
   </div>
 
-  <app-sub-category-form></app-sub-category-form>
-  <!-- <div class="row mt-3">
-    <div class="form-group col-lg-4">
-      <label class="mb-1" for="title">Sub Category</label>
-      <input type="text" class="form-control" id="Sub Category" placeholder="Sub Category">
-    </div>
+  <app-sub-category-form [form_control]="f['subCategories']"></app-sub-category-form>
 
-    <div class="form-group col-lg-2 mt-4 offset-1">
-      <button type="button" class="btn btn-primary">
-        <i class="bi bi-plus-circle"></i>
-        Add
-      </button>
-    </div>
-
-  </div> -->
-
-
-
-  <button type="submit" class="btn btn-primary btn-lg mt-3"><i class="bi bi-save"></i>&nbsp;Save</button>
+  <button type="submit" class="btn btn-primary btn-lg mt-3" (click)="onSubmit()">
+    <i class="bi bi-save"></i>&nbsp;{{buttonTitle}}
+  </button>
 
 </form>
 
