--- a/src/app/pages/config/common/category-table/category-table.component.html
+++ b/src/app/pages/config/common/category-table/category-table.component.html
@@ -15,6 +15,7 @@
           <th scope="col" sortable="id">#</th>
           <th scope="col" sortable="title">Title</th>
           <th scope="col">Image URL</th>
+          <th scope="col">Package</th>
           <th scope="col">Sub Categories</th>
           <th scope="col">Actions</th>
 
@@ -27,9 +28,13 @@
             <ngb-highlight [result]="cat.title" [term]="service.searchTerm"></ngb-highlight>
           </td>
           <td>{{cat.imageUrl}}</td>
+          <td>{{cat.package | isPackagePipe}}</td>
           <td>{{cat.subCategories}}</td>
 
-          <td><i class="bi bi-pencil"></i> &nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
+          <td>
+            <i class="bi bi-pencil" (click)="onEditClick(cat)"></i>
+            &nbsp;&nbsp;&nbsp;
+            <i class="bi bi-trash3" style="color: red;"></i>
           </td>
 
         </tr>
