--- a/src/app/pages/config/featured-categories/featured-categories.component.html
+++ b/src/app/pages/config/featured-categories/featured-categories.component.html
@@ -30,4 +30,4 @@
 
 <hr class="mt-2 mb-2">
 
-<app-category-table></app-category-table>
+<app-category-table (editFeatured)="editClick($event)"></app-category-table>
