--- a/src/app/pages/products/add-product/add-product.component.html
+++ b/src/app/pages/products/add-product/add-product.component.html
@@ -1,30 +1,39 @@
-<form style="width: 95%; margin: 30px 30px;">
+<form [formGroup]="form" style="width: 95%; margin: 30px 30px;">
   <h3> Add Product</h3>
   <div class="row">
     <div class="form-group col-lg-6">
       <label class="mb-2" for="title-english">Title(English)</label>
-      <input type="text" class="form-control" id="title-english" placeholder="Title(English)">
+      <input formControlName="title_english" type="text" class="form-control" id="title-english"
+        placeholder="Title(English)">
+      <app-errors [form_control]="f['title_english']" [isSubmitted]="isFormSubmit"></app-errors>
+
     </div>
 
     <div class="form-group col-lg-6">
       <label class="mb-2" for="title-urdu">Title(Urdu)</label>
-      <input type="text" class="form-control" id="title-urdu" placeholder="Title(Urdu)">
+      <input formControlName="title_urdu" type="text" class="form-control" id="title-urdu" placeholder="Title(Urdu)">
+      <app-errors [form_control]="f['title_urdu']" [isSubmitted]="isFormSubmit"></app-errors>
+
     </div>
 
   </div>
   <div class="row mt-3">
     <div class="form-group col-lg-6">
       <label class="mb-2" for="title-english">Product Category</label>
-      <ng-select [items]="productCategories" bindLabel="title" bindValue="id" [virtualScroll]="true"
-        placeholder="Product Category" [(ngModel)]="selectedCategory">
+      <ng-select formControlName="category" [items]="productCategories" bindLabel="title" bindValue="id"
+        [virtualScroll]="true" placeholder="Product Category">
       </ng-select>
+      <app-errors [form_control]="f['category']" [isSubmitted]="isFormSubmit"></app-errors>
+
     </div>
 
     <div class="form-group col-lg-6">
       <label class="mb-2" for="title-english">Product Sub-Category</label>
-      <ng-select [items]="productCategories" [multiple]="true" bindLabel="title" bindValue="id" [virtualScroll]="true"
-        placeholder="Sub Categorie(s)" [(ngModel)]="selectedCategory">
+      <ng-select formControlName="subCategory" [items]="productCategories" [multiple]="true" bindLabel="title"
+        bindValue="id" [virtualScroll]="true" placeholder="Sub Categorie(s)">
       </ng-select>
+      <app-errors [form_control]="f['subCategory']" [isSubmitted]="isFormSubmit"></app-errors>
+
     </div>
 
   </div>
@@ -32,23 +41,42 @@
   <div class="row mt-3">
     <div class="form-group col-lg-12">
       <label class="mb-2" for="imageUrl">Image Url</label>
-      <input type="url" class="form-control" id="imageUrl" placeholder="Image Url">
+      <input formControlName="imageUrl" type="url" class="form-control" id="imageUrl" placeholder="Image Url">
+      <app-errors [form_control]="f['imageUrl']" [isSubmitted]="isFormSubmit"></app-errors>
+
     </div>
   </div>
 
   <div class="row mt-3">
-    <h4>Product Sub Category</h4>
-    <div class="form-group col-lg-2">
-      <label class="mb-1" for="weight">Weight</label>
-      <input type="number" class="form-control" id="Sub Category" placeholder="Weight">
+    <div class="form-group col-lg-12">
+      <label class="mb-2" for="price">Default Price(/kg)</label>
+      <input formControlName="defaultPrice" type="number" class="form-control" id="price" placeholder="Price">
+      <app-errors [form_control]="f['defaultPrice']" [isSubmitted]="isFormSubmit"></app-errors>
     </div>
-    <div class="form-group col-lg-2">
-      <label class="mb-1" for="price">Price</label>
-      <input type="number" class="form-control" id="price" placeholder="Price">
+  </div>
+
+  <!-- Packing From -->
+  <div class="row mt-3" [formGroup]="packingForm">
+    <h4>Product Packing</h4>
+
+
+    <div class="form-group col-lg-3">
+      <label class="mb-1" for="weight">Weight</label>
+      <input formControlName="weight" type="number" class="form-control" id="weight" placeholder="Weight">
     </div>
 
-    <div class="form-group col-lg-2 mt-4 offset-1">
-      <button type="button" class="btn btn-primary">
+    <div class="form-group col-lg-3">
+      <label class="mb-1" for="info">Info</label>
+      <input formControlName="info" type="text" class="form-control" id="info" placeholder="info">
+    </div>
+
+    <div class="form-group col-lg-3">
+      <label class="mb-1" for="price">Price</label>
+      <input formControlName="price" type="number" class="form-control" id="price" placeholder="Price">
+    </div>
+
+    <div class="form-group col-lg-2 mt-4 ">
+      <button type="button" class="btn btn-primary" (click)="addPacking()">
         <i class="bi bi-plus-circle"></i>
         Add
       </button>
@@ -58,13 +86,12 @@
   </div>
 
   <div class="row">
-    <div class="form-group col-lg-6 mt-2">
-      <app-product-sub-category-table></app-product-sub-category-table>
+    <div class="form-group col-lg-10 mt-2">
+      <app-product-packing-table [packings]="_packings"></app-product-packing-table>
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-lg mt-3"><i class="bi bi-save"></i>&nbsp;Save</button>
+  <button type="submit" (click)="onSubmit()" class="btn btn-primary btn-lg mt-3"><i
+      class="bi bi-save"></i>&nbsp;Save</button>
 
 </form>
-
-<hr class="mt-2 mb-2">
