--- a/src/app/pages/products/common/product-packing-table/product-packing-table.component.html
+++ b/src/app/pages/products/common/product-packing-table/product-packing-table.component.html
@@ -11,13 +11,13 @@
     </thead>
     <tbody>
 
-      <tr *ngFor="let sc of productSubCategories; index as i">
-        <th scope="row">{{ i + 1 }}</th>
+      <tr *ngFor="let p of packings; index as i">
+        <th scope="row">{{ p.id}}</th>
         <td>
-          {{ sc.weight }}
+          {{ p.weight }}
         </td>
         <td>
-          {{ sc.price |currency }}
+          {{ p.price |currency }}
         </td>
         <td> &nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
         </td>
