--- a/src/app/pages/delivery-riders/riders-table/riders-table.component.html
+++ b/src/app/pages/delivery-riders/riders-table/riders-table.component.html
@@ -1,3 +1,54 @@
-<p>
-  riders-table works!
-</p>
+<div style=" width: 90%; margin: 30px 30px;">
+  <form>
+    <div class="mb-3 row">
+      <div class="col-xs-3 col-sm-auto">
+        <input id="table-complete-search" type="text" class="form-control" name="searchTerm" placeholder="Search"
+          [(ngModel)]="service.searchTerm" />
+      </div>
+      <span class="col col-form-label" *ngIf="service.loading$ | async">Loading...</span>
+    </div>
+
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Name</th>
+          <th scope="col">Image URL</th>
+          <th scope="col">Phone</th>
+          <th scope="col">CNIC</th>
+          <th scope="col">Actions</th>
+
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let dg of deliveryGuys$ | async">
+          <th scope="row">{{ dg.id }}</th>
+          <td>
+            <ngb-highlight [result]="dg.name" [term]="service.searchTerm"></ngb-highlight>
+          </td>
+          <td>{{dg.imageURL}}</td>
+          <td>{{dg.phone}}</td>
+          <td>{{dg.cnic}}</td>
+
+          <td>
+            <i class="bi bi-pencil" (click)="onEditClick(cat)"></i>
+            &nbsp;&nbsp;&nbsp;
+            <i class="bi bi-trash3" style="color: red;"></i>
+          </td>
+
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="d-flex justify-content-between p-2">
+      <ngb-pagination [collectionSize]="(total$ | async)!" [(page)]="service.page" [pageSize]="service.pageSize">
+      </ngb-pagination>
+
+      <select class="form-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
+        <option [ngValue]="5">5 items per page</option>
+        <option [ngValue]="10">10 items per page</option>
+        <option [ngValue]="20">20 items per page</option>
+      </select>
+    </div>
+  </form>
+</div>
